--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.6.3",
+    "@material-ui/core": "^4.5.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -16,6 +18,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "material-table": "^1.53.0",
     "webpack-dev-server": "^3.9.0"
   }
 }
